# edgetpu

./: .ccls  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  classify_image.py  compile_commands.json  default.nix  edgetpu-compiler.nix  edgetpu.nix  libedgetpu-dev.nix  libedgetpu1.nix  meson.build  opencv4.nix  params.json  remove_decoder.py  rust.nix  shell.nix  tensorflow-lite.nix  test.sh  test_posenet.py  tflite-app.nix  toolchain.patch  wrapper.h  xtensor.nix
app/: Makefile  main.cc  main.cpp  meson.build  pose_constants.hpp  pose_decode.cc  pose_decode.hpp  pose_engine.cc  pose_engine.hpp  pose_types.cc  pose_types.hpp
include/: coral_ffi.h  ffi.h
nix/: default.nix  opencv4.nix  pose.nix  python-flatbuffers.nix  sources.json  v4l-utils.nix  xtensor.nix
pose/: Makefile  model-info
pose/model-info_src/: main.cc
pose/pose_src/: pose.cc  pose_constants.hpp  pose_decode.cc  pose_decode.hpp  pose_engine.cc  pose_engine.hpp  pose_types.cc  pose_types.hpp
posenet/: __init__.py  core.py  pose_engine.py
src/: coral.rs  coral_ffi.cc  coral_ffi.rs  decode.rs  edgetpu.rs  engine.rs  error.rs  ffi.cc  ffi.rs  main.rs  pose.rs  remove_decoder.rs  tf.rs  tflite.rs  tflite_sys.rs
src/decode/: hand_rolled.rs  mod.rs  point.rs  posenet.rs
src/decode/hand_rolled/: adjacency_list.rs  keypoint_priority_queue.rs  keypoint_with_score.rs  mod.rs  point.rs
src/tflite/: delegate.rs  interpreter.rs  mod.rs  model.rs  options.rs  tensor.rs
tflite-pose/: Cargo.toml  build.rs  wrapper.h
tflite-pose/src/: edgetpu.rs  engine.rs  error.rs  errors.rs  main.rs  pose.rs  tflite.rs  tflite_sys.rs  wrapper.hpp
