[package]
name = "tflite-pose"
version = "0.1.0"
authors = ["Phillip Cloud <cpcloud@gmail.com>"]
edition = "2018"

[features]
default = []
gui = []

[dependencies]
structopt = "0.3.21"
anyhow = "1.0.40"
opencv = { version = "0.53.0", features = ["clang-runtime"] }
thiserror = "1"
ndarray = "0.15.2"
num-derive = "0.3"
num-traits = "0.2"
indicatif = "0.16"

[build-dependencies]
anyhow = "1"
bindgen = "0.58.1"
pkg-config = "0.3.19"

[profile.release]
lto = true
codegen-units = 1
