[package]
name = "tflite-pose"
version = "0.1.0"
authors = ["Phillip Cloud <cpcloud@gmail.com>"]
edition = "2018"

[features]
default = []
gui = []
posenet_decoder = []

[dependencies]
anyhow = "1"
ctrlc = "3"
indicatif = "0.16"
ndarray = "0.15"
num-derive = "0.3"
num-traits = "0.2"
opencv = { version = "0.53", features = ["clang-runtime"] }
ordered-float = "2"
structopt = "0.3"
thiserror = "1"

[build-dependencies]
anyhow = "1"
bindgen = "0.58"
pkg-config = "0.3"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[profile.release]
lto = true
codegen-units = 1
