[package]
name = "tflite-pose"
version = "0.1.0"
authors = ["Phillip Cloud <cpcloud@gmail.com>"]
edition = "2018"

[features]
default = []
gui = []

[dependencies]
anyhow = "1.0.41"
bitvec = "0.22.3"
crossbeam = "0.8.1"
ctrlc = "3.1.9"
cxx = "1.0.49"
humantime = "2.1.0"
indicatif = "0.16.2"
ndarray = "0.15.3"
num-derive = "0.3.3"
num-traits = "0.2.14"
opencv = { version = "0.53.0", features = ["clang-runtime"] }
ordered-float = "2.5.1"
structopt = "0.3.21"
thiserror = "1.0.25"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"

[build-dependencies]
anyhow = "1.0.41"
bindgen = "0.58.1"
cxx-build = "1.0.49"
pkg-config = "0.3.19"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[profile.release]
lto = true
codegen-units = 1
