[package]
name = "tflite-pose"
version = "0.1.0"
authors = ["Phillip Cloud <cloud@standard.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
anyhow = "1.0.40"
autocxx = "0.10.0"
opencv = { version = "0.53.0", features = ["clang-runtime"] }
thiserror = "1"
cxx = "1.0.49"
ndarray = "0.15.2"

[build-dependencies]
anyhow = "1.0.40"
autocxx-build = "0.10.0"
pkg-config = "0.3.19"
